# npu-design-tutorial

./: .gitignore  .gitmodules  AGENTS.md  README.md  add-my-keys.sh  paperlist.md  pyproject.toml  setup-envs.sh
context/: README.md
context/design/: README.md  project-design.md  project-idea.md
context/hints/: README.md  about-accel-sim-vs-llmcompass.md
context/instructions/: README.md  prep-dev-env.md
context/logs/: README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/roles/role1/: README.md
context/summaries/: GPU Design Evaluation for DNN Inference_ Methods and Tools.docx  README.md  gpu-design-evaluation-for-dnn-inference-methods-and-tools.md  survey-gpu-design.md
context/tasks/: README.md
context/tools/: README.md
dockers/: README.md  build-merged.sh  docker-compose.yml  featreq-run-merged-default-compose-like.md  merged.Dockerfile  merged.env  run-merged.sh  user_config.yml
dockers/main/: docker-compose.yml  merged.Dockerfile  merged.env  run-merged.sh  user_config.yml
notes/accel-sim/: about-accel-sim-and-enhancements.md  main-note.md  supported-metrics.md
notes/modern-gpu-cores/: main-note.md
notes/parallelizing-modern-gpu-simulator/: main-note.md
notes/repurpose-accel-sim-jetson-gpu/: main-note.md
notes/vidur/: main-note.md
paper-source/accel-sim/: Accel-Sim-no-images.md  Accel-Sim.docx
paper-source/modern-gpu-cores/: modern-gpu-cores.docx  modern-gpu-cores.md
paper-source/parallelizing-modern-gpu-simulator/: parallelizing-modern-gpu-simulator.md
(+36 files in other folders)
